# WorldEdit

./: .gitignore  CMakeLists.txt  Doxyfile  PKGBUILD  WorldEdit.sln  config.h.in  worldedit.spec
.github/: LICENSE  README.md
debian/: README  control  rules  worldedit-plugin-git.install  worldedit.install  worldedit.manpages
doc/: manual.adoc
include/: Bounded.h  StringSerialisable.h  Texture.h  editable.h  i18n.h  iaasfile.h  iarchive.h  iautosaver.h  ibrush.h  icameraview.h  iclipboard.h  iclipper.h  icolourscheme.h  icommandsystem.h  icounter.h  icurve.h  idecltypes.h  ieclass.h  ieditstopwatch.h  ifilesystem.h  ifiletypes.h  ifonts.h  igame.h  igrid.h  igroupnode.h  iinteractiveview.h  ikeyvaluestore.h  ilayer.h  ilightnode.h  ilogwriter.h  imanipulator.h  imap.h  imapformat.h  imapinfofile.h  imapresource.h  imodel.h  imodelcache.h  imodelsurface.h  imodule.h  imousetool.h  (+31 more)
include/ui/: idialogmanager.h  ientityinspector.h  ieventmanager.h  imainframe.h  imenumanager.h  iwxgl.h
install/: colours.xml  commandsystem.xml  debug.xml  input.xml  menu.xml  net.worldedit.WorldEdit.metainfo.xml  user.xml  worldedit.desktop.in
install/games/: doom3-demo.game  doom3.game  prey.game  quake3-demo.game  quake3.game  quake4.game
install/gl/: cubemap_vp.glsl
install/i18n/: Makefile.in.in  Makevars  POTFILES.in  worldedit.pot
install/plugins/: README.txt
install/scripts/: init.py  materialtest.py  test.py
install/ui/: aboutdialog.fbp  aboutdialog.xrc  camwnd.fbp  camwnd.xrc  findandreplacedialog.fbp  findandreplacedialog.xrc  materialeditor.fbp  materialeditor.xrc  mergecontroldialog.fbp  mergecontroldialog.xrc  renderpreview.fbp  renderpreview.xrc  skineditor.fbp  skineditor.xrc
libs/: BasicTexture2D.h  ObservedSelectable.h  ObservedUndoable.h  RGBAImage.h  SurfaceShader.h  Transformable.h  UndoFileChangeTracker.h  entitylib.h  gamelib.h  pivot.h  render.h  scenelib.h  selectionlib.h  shaderlib.h  texturelib.h  transformlib.h
libs/command/: ExecutionNotPossible.h
libs/debugging/: ScenegraphUtils.h  ScopedDebugTimer.h  debugging.h
libs/decl/: DeclLib.h  DeclarationBase.h
libs/materials/: ParseLib.h
libs/math/: Frustum.h  Plane3.h
libs/messages/: ApplicationIsActiveRequest.h  ClearConsole.h  ScopedLongRunningOperation.h  TextureChanged.h  TextureToolRequest.h
libs/module/: ApplicationContextBase.cpp  CoreModule.cpp
libs/os/: dir.h  file.h  fs.h  path.h
libs/parser/: CodeTokeniser.h  DefBlockSyntaxParser.h  DefTokeniser.h  Tokeniser.h
libs/registry/: Widgets.h
libs/render/: MeshVertex.h  NopVolumeTest.h  RenderVertex.h  RenderableCollectionWalker.h  RenderablePivot.h  RenderableSpacePartition.h  SceneRenderWalker.h  TexCoord2f.h  VertexCb.h  View.h
libs/selection/: BestPoint.h  OccludeSelector.h  SelectionPool.h  SelectionVolume.h  SingleItemSelector.h
libs/settings/: SettingsManager.h
libs/string/: convert.h  predicate.h  replace.h  split.h
libs/wxutil/: EntityClassChooser.cpp  GLContext.h
man/: Makefile  worldedit.1  worldedit.adoc
plugins/script/: PythonConsoleWriter.h  PythonModule.cpp  PythonModule.h  ScriptModule.cpp
plugins/sound/: SoundManager.cpp  sound.cpp
plugins/vcs/: Algorithm.h  GitModule.cpp  Reference.h
radiant/: CMakeLists.txt  RadiantApp.cpp  main.cpp  worldedit.rc
radiant/camera/: CamWnd.cpp
radiant/log/: PIDFile.h
radiant/settings/: LocalisationModule.cpp  LocalisationProvider.cpp
radiant/ui/: DispatchEvent.h  Documentation.cpp  Documentation.h  FileOverwriteConfirmationHandler.h  FileSelectionRequestHandler.h  MapFileProgressHandler.cpp  SelectionModeToggle.h  UserInterfaceModule.cpp  UserInterfaceModule.h
radiant/xyview/: GlobalXYWnd.cpp  OrthoView.cpp
radiantcore/: CMakeLists.txt  Radiant.cpp
radiantcore/brush/: Brush.cpp  Brush.h  BrushClipPlane.h  BrushModule.cpp  BrushNode.cpp  BrushNode.h  BrushSettings.h  BrushVisit.h  Face.h  FaceInstance.cpp  FaceInstance.h  SelectableComponents.h  TextureMatrix.cpp  TextureMatrix.h  TextureProjection.cpp  TextureProjection.h  Winding.h
radiantcore/camera/: Camera.cpp  Camera.h
radiantcore/clipper/: BrushByPlaneClipper.cpp  ClipPoint.cpp  Clipper.cpp  Clipper.h  SplitAlgorithm.cpp
radiantcore/commandsystem/: Command.h  CommandSystem.cpp  CommandSystem.h  CommandTokeniser.h  Statement.h
radiantcore/eclass/: Doom3ModelDef.h  EClassManager.cpp  EClassManager.h  EntityClass.cpp  EntityClass.h
radiantcore/entity/: AngleKey.h  EntityModule.cpp  EntityModule.h  RotationMatrix.h  VertexInstance.h
radiantcore/filetypes/: FileTypeRegistry.cpp  FileTypeRegistry.h
radiantcore/filters/: BasicFilterSystem.cpp  BasicFilterSystem.h
radiantcore/fonts/: FontLoader.cpp  FontLoader.h  FontManager.cpp  FontManager.h
radiantcore/fx/: FxManager.cpp
radiantcore/grid/: GridManager.cpp
radiantcore/imagefile/: ImageLoader.cpp  ImageLoader.h  ImageTypeLoader.h  PNGLoader.cpp  TGALoader.cpp  TGALoader.h  dds.h  ddslib.cpp
radiantcore/layers/: AddToLayerWalker.h  LayerInfoFileModule.cpp  LayerInfoFileModule.h  LayerManager.cpp  LayerManager.h  LayerModule.cpp  MoveToLayerWalker.h  RemoveFromLayerWalker.h  SetLayerSelectedWalker.h
radiantcore/log/: LogFile.cpp  LogFile.h  LogStream.cpp  LogStream.h  LogStreamBuf.cpp  LogWriter.cpp  LogWriter.h
radiantcore/map/: EditingStopwatch.h  EditingStopwatchInfoFileModule.h  Map.cpp  Map.h  MapPositionManager.cpp  MapPropertyInfoFileModule.h  MapResource.cpp  MapResource.h  MapResourceManager.cpp  MapResourceManager.h  PointFile.cpp  PointFile.h  RegionManager.cpp  RegionWalkers.h  RootNode.cpp  RootNode.h
radiantcore/messagebus/: MessageBus.h
radiantcore/model/: ModelCache.cpp  ModelCache.h  ModelFormatManager.cpp  ModelFormatManager.h  NullModel.h  NullModelLoader.h  NullModelNode.cpp  NullModelNode.h  StaticModelNode.cpp  StaticModelNode.h  StaticModelSurface.cpp  (+1 more)
(+451 files in other folders)
